--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,7 +22,7 @@ body {
 /* Custom page header */
 .header {
   border-bottom: 0px solid #e5e5e5;
-  margin-bottom: 10px;
+  margin-bottom: 00px;
 
 }
 
@@ -31,7 +31,7 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
-  padding-bottom: 19px;
+  padding-bottom: 0px;
 
 }
 
@@ -44,7 +44,7 @@ body {
 }
 
 .container-narrow > hr {
-  margin: 30px 0;
+  margin: 00px 0;
 
 }
 
@@ -90,7 +90,7 @@ body {
 
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    margin-bottom: 0px;
   }
 
   /* Remove the bottom border on the jumbotron for visual effect */
@@ -244,10 +244,34 @@ background-color: oldlace;
 
 .date {
   text-align: left;
-  line-height: 40px;
+  line-height: 10px;
   color: gray;
   border-radius: 2px;
 }
 .note-text{
 
+}
+.place{
+  padding:20px;
+  border:10px solid #fcfcfc;
+}
+.place-name{
+  font-size:16px;
+  margin-bottom:15px;
+  border-bottom: 5px solid #fcfcfc;
+}
+.h-work{
+  color: #d0d0d0;
+  font-size:13px;
+}
+.place-image{
+
+}
+.place-description{
+  margin-top:15px;
+  color: #808080;
+}
+.place-adres{
+  color: #d0d0d0;
+  font-size:13px;
 }
