--- a/app/views/in.html
+++ b/app/views/in.html
@@ -15,9 +15,12 @@
           <div class="form-text">Пароль</div>
         </div>
         <div class="col-xs-9">
-          <input type="password" class="form-control search" data-ng-model="password">
+          <input type="password" class="form-control search" data-ng-model="pw">
         </div>
       </div>
+    </div>
+    <div class="col-xs-6 col-xs-offset-3">
+      <button class="reg-button" data-ng-click="in()">Ok</button>
     </div>
   </div>
 </div>
