--- a/app/views/partials/place/place.html
+++ b/app/views/partials/place/place.html
@@ -22,7 +22,7 @@
       {{place.description}}
     </div>
   </div>
-  <div class="col-xs-12" id="place-map"></div>
+  <place-map></place-map>
   <div class="col-xs-12 placeId-reviews">
     <div class="col-xs-12 placeId-reviews-all">
       <div class="col-xs-3 placeId-reviews-text">
