--- a/app/views/partials/place.html
+++ b/app/views/partials/place.html
@@ -6,7 +6,7 @@
   </div>
   <div class="col-xs-8 place-desc">
     <div class="col-xs-12 place-name">
-      <a ui-sref="state1.placeOne({id:place._id})">{{place.placeName}}</a>
+      <a ui-sref="state1.placeOne({id:place._id})" ng-click="rel()">{{place.placeName}}</a>
     </div>
     <div class="col-xs-2 assessment">
       {{place.rating}}
