--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -174,9 +174,9 @@ body {
 }
 
 .sub-menu {
-  font-size: 16px;
+  font-size: 14px;
   padding: 20px;
-  padding-left: 30px;
+  padding-left: 10px;
   border: 10px solid #fdfdfd;
 }
 
@@ -370,6 +370,33 @@ body {
 
 }
 
+.placeId-comment-likes {
+  background-color: #fcfcfc;
+  border: 10px solid #fcfcfc;
+  padding: 15px;
+
+}
+
+.placeId-comment-likes-items {
+  background-color: white;
+  border: 10px solid #fafafa;
+  padding: 15px;
+
+}
+
+.userLike-plus {
+  padding: 20px;
+  text-align: center;
+  background-color: #f9f9f9;
+  font-size: 18px;
+  color: #504e69;
+}
+
+.userLike-plus:hover {
+  background-color: #e9e9e9;
+  cursor: pointer;
+}
+
 .placeId-review-person {
   font-size: 18px;
   color: #4e5274;
@@ -395,7 +422,7 @@ body {
 
   line-height: 40px;
   color: #d8d8d8;
-  font-size: 16px;
+  font-size: 14px;
   border-radius: 2px;
 }
 
@@ -445,7 +472,6 @@ body {
 }
 
 .user-menu {
-  height: 40px;
 
   margin-bottom: 10px;
 }
@@ -472,8 +498,19 @@ body {
 
 .userLike-place {
   padding: 10px;
-  font-size: 30px;
+  font-size: 25px;
   line-height: 30px;
   padding-top: 0px;
   font-weight: 600;
 }
+
+.place-actions {
+  padding: 20px;
+  text-align: center;
+  background-color: rgba(245, 245, 0, 0.39);
+}
+
+.place-actions:hover {
+  background-color: rgb(245, 245, 0);
+}
+
