--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,9 +5,9 @@
       <div class="col-xs-12 user-name">{{test[i].userName}}</div>
       <div class="col-xs-12 user-image"><img data-ng-src="images/default_user.png" class="img-responsive"></div>
       <div class="col-xs-12 user-menu">
-        <div class="col-xs-4 user-menu-item glyphicon glyphicon-pencil" title="Написать отзыв"></div>
-        <div class="col-xs-4 user-menu-item glyphicon glyphicon-thumbs-up" title="Палец вверх"></div>
-        <div class="col-xs-4 user-menu-item glyphicon glyphicon-cog" title="Настройки"></div>
+        <div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-pencil" title="Написать отзыв"></div>
+        <div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-list-alt" title="Мои отзывы"></div>
+        <div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-cog" title="Настройки"></div>
       </div>
     </div>
     <div class="col-xs-12">
