--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -369,7 +369,13 @@ body {
   padding: 15px;
 
 }
+.placeId-comment2 {
 
+  border: 10px solid #fcfcfc;
+  padding: 15px;
+  background-color: #fcfcfc;
+
+}
 .placeId-comment-likes {
   background-color: #fcfcfc;
   border: 10px solid #fcfcfc;
@@ -513,4 +519,74 @@ body {
 .place-actions:hover {
   background-color: rgb(245, 245, 0);
 }
+.filter-places{
+  border-radius: 2px;
+border:2px solid #ececec;
+}
+.delete-all-places{
+  background-color: rgba(255, 0, 0, 0.47);
+  text-align: center;
+  font-size: 18px;
+  color:white;
+  padding:4px;
 
+}
+.delete-all-places:hover{
+  background-color: rgba(255, 0, 0, 0.61);
+  cursor: pointer;
+}
+.top-filter-place{
+  padding:20px;
+background-color: rgba(80, 78, 105, 0.10);
+}
+.userReviewPlaceRating{
+  height: 40px;
+
+}
+.textarea{
+  padding:20px;
+  padding-top:0px;
+}
+.textarea-text{
+border-radius: 2px;
+  border:5px solid rgba(10, 10, 21, 0.09);
+}
+.submitUserAddReview{
+  background-color: #f5f500;
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 2px;
+  border:0px solid #f9f9f9;
+}
+.submitUserAddReview:active{
+  background-color: #e8e800;
+}
+.settings{
+  background-color: rgba(80, 78, 105, 0.10);
+  padding:20px;
+  font-size:20px;
+}
+.settings-group{
+  padding:20px;
+  border: 10px solid #fafafa;
+}
+.settingsType{
+  border-radius:2px;
+  border:4px solid #eaeaea;
+  font-size:16px;
+}
+.settingsTypeButton{
+  padding:4px;
+  background-color: #f5f500;
+  border:0px solid black;
+  border-bottom:4px solid #eaeaea;
+  border-radius:2px;
+  font-size:16px;
+
+}
+.your{
+  padding:20px;
+  background-color: rgba(192, 187, 252, 0.05);
+  color:darkslateblue;
+  margin-bottom:10px;
+}
