--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,12 +2,12 @@
 
   <div class="col-xs-3 left-column">
     <div class="col-xs-12" ng-show="au">
-      <div class="col-xs-12 user-name">{{test[i].userName}}</div>
-      <div class="col-xs-12 user-image"><img data-ng-src="images/default_user.png" class="img-responsive"></div>
+      <div class="col-xs-12 user-name">{{test[i].userName}} {{test[i].userLastName}}</div>
+      <div class="col-xs-12 user-image"><img data-ng-src="{{test[i].userImage}}" class="img-responsive"></div>
       <div class="col-xs-12 user-menu">
         <div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-pencil" title="Написать отзыв"></div>
         <div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-list-alt" title="Мои отзывы"></div>
-        <div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-cog" title="Настройки"></div>
+        <a ui-sref="state1.settings"><div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-cog" title="Настройки"></div></a>
       </div>
     </div>
     <div class="col-xs-12">
@@ -18,9 +18,7 @@
         <a ui-sref="state1.place">
           <div class="sub-menu">Места</div>
         </a>
-        <a ui-sref="state1.reviews">
-          <div class="sub-menu">Отзывы</div>
-        </a>
+
         <a ui-sref="state1.discussion">
           <div class="sub-menu">Обсуждения</div>
         </a>
