--- a/app/views/partials/place/place.html
+++ b/app/views/partials/place/place.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 place" data-ng-controller="MainCtrl">
+<div class="col-xs-12 place">
   <div class="col-xs-4 place-image">
     <img data-ng-src="{{place.imageUrl}}" class="img-responsive">
 
@@ -28,26 +28,46 @@
       <div class="col-xs-3 placeId-reviews-text">
         Отзывы
       </div>
-      <div class="col-xs-6 col-xs-offset-3 placeId-reviews-button ng-hide" data-ng-show="au">
+      <div class="col-xs-6 col-xs-offset-3 placeId-reviews-button ng-hide" ng-controller='jqueryController'
+           data-ng-show="au" id="addReview">
         Добавить свой отзыв
       </div>
     </div>
 
   </div>
 
+  <div class="col-xs-12 placeId-comment2" data-ng-show="au">
+    <form name="userAddReview" data-ng-controller="formPlaceId" class="userAddReview">
+      <img class="col-xs-2 img-responsive" ng-src="{{test[i].userImage}}">
 
-  <div class="col-xs-12 placeId-comment" data-ng-repeat="comment in place.reviews">
-    <img class="col-xs-3 img-responsive" ng-src="{{comment.image}}">
-    <div class="col-xs-9 placeId-review-person">{{comment.name}}</div>
-    <div class="col-xs-9 placeId-review-date">
-      <div class="col-xs-2 placeId-review-assessment">
-        {{comment.rating}}
+      <div class="col-xs-10 placeId-review-person">{{test[i].userName}}</div>
+      <div class="col-xs-9 placeId-review-date">
+
+        <select ng-model="placeRating" required class="placeId-review-assessment userReviewPlaceRating col-xs-2">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+
+        <div class="col-xs-10 placeId-review-date-date">{{day}}.{{month+1}}.{{year}} в {{hour}}:{{minutes}}</div>
+
       </div>
-      <div class="col-xs-5 placeId-review-date-date">{{comment.data}}  в {{comment.time}}</div>
-      <div class="col-xs-2 glyphicon glyphicon-thumbs-up placeId-review-icon" aria-hidden="true"></div>
-    </div>
-    <div class="col-xs-12 placeId-review-comment">{{comment.comment}}
-    </div>
+      <div class="col-xs-12 placeId-review-comment">{{comment.comment}}
+      </div>
+      <div class="col-xs-12 textarea">
+        <textarea class="form-control textarea-text" rows="3" data-ng-model="comment" required></textarea>
+      </div>
+      <div class="col-xs-12 ">
+        <button class="col-xs-3 col-xs-offset-9 submitUserAddReview" data-ng-click="addReview()">Добавить</button>
+      </div>
+    </form>
+  </div>
+
+
+  <div class="col-xs-12 placeId-comment" data-ng-repeat="comment in reviews">
+    <place-directive></place-directive>
 
   </div>
 
