--- a/app/views/partials/place/placeDir.html
+++ b/app/views/partials/place/placeDir.html
@@ -1,6 +1,6 @@
-<img class="col-xs-2 img-responsive" ng-src="{{comment.userImage}}">
+<img class="col-xs-2 img-responsive" ng-src="{{reviewId.userImage}}">
 
-<div class="col-xs-10 placeId-review-person">{{comment.userName}}</div>
+<div class="col-xs-10 placeId-review-person">{{reviewId.userName}} {{reviewId.userLastName}}</div>
 <div class="col-xs-9 placeId-review-date">
   <div class="col-xs-2 placeId-review-assessment">
     {{comment.rating}}
