--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,9 +5,11 @@
       <div class="col-xs-12 user-name">{{test[i].userName}} {{test[i].userLastName}}</div>
       <div class="col-xs-12 user-image"><img data-ng-src="{{test[i].userImage}}" class="img-responsive"></div>
       <div class="col-xs-12 user-menu">
-        <div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-pencil" title="Написать отзыв"></div>
-        <div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-list-alt" title="Мои отзывы"></div>
-        <a ui-sref="state1.settings"><div class="col-sm-4 col-xs-12 user-menu-item glyphicon glyphicon-cog" title="Настройки"></div></a>
+        <div class="col-sm-3 col-xs-12 user-menu-item glyphicon glyphicon-pencil" title="Написать отзыв"></div>
+        <a ui-sref="state1.settings"><div class="col-sm-3 col-xs-12 user-menu-item glyphicon glyphicon-map-marker" title="Места в которых я был"></div></a>
+        <a ui-sref="state1.myReviews"><div class="col-sm-3 col-xs-12 user-menu-item glyphicon glyphicon-list-alt" title="Мои отзывы"></div></a>
+        <a ui-sref="state1.settings"><div class="col-sm-3 col-xs-12 user-menu-item glyphicon glyphicon-cog" title="Настройки"></div></a>
+
       </div>
     </div>
     <div class="col-xs-12">
