--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -533,7 +533,7 @@ body {
   font-size: 18px;
   color: white;
   padding: 4px;
-
+  border-radius: 2px;
 }
 
 .delete-all-places:hover {
@@ -647,5 +647,26 @@ body {
   padding: 10px;
   background-color: #f5f500;
   text-align: center;
-  margin-top:10px;
+  margin-top: 10px;
+}
+
+.haveNotLikes {
+  margin-top: 40px;
+}
+
+.haveNotLikes-main {
+  font-size: 50px;
+  color: #b9b9b9;
+}
+
+.haveNotLikes-second {
+  font-size: 20px;
+  color: #b9b9b9;
+}
+
+.haveNotLikes-icon {
+  color: #f5f5f5;
+  font-size: 300px;
+
+  margin-top: 20px;
 }
