--- a/app/views/partials/like/like.html
+++ b/app/views/partials/like/like.html
@@ -1,7 +1,32 @@
-<div data-ng-controller="likeController">
-  <div class="col-xs-12 place-actions" data-ng-show="au" data-ng-click="toggleLike(place._id)">
-    <div class="col-xs-12 glyphicon glyphicon-thumbs-up"></div>
+<div class="col-xs-4 place-image">
+  <img data-ng-src="{{place.imageUrl}}" class="img-responsive">
+
+  <div class="col-xs-12 place-reviews">{{place.category}}</div>
+
+  <div data-ng-show="au">
+
+    <div data-ng-show="like">
+      <div class="col-xs-12 place-actions" data-ng-click="toggleLike(place._id)">
+        <div class="col-xs-12 glyphicon glyphicon-thumbs-up"></div>
+      </div>
+    </div>
+
   </div>
-
 </div>
-
+<div class="col-xs-8 place-desc">
+  <div class="col-xs-12 place-name">
+    <a ui-sref="state1.placeOne({id:place._id})" ng-click="rel()">{{place.placeName}}</a>
+  </div>
+  <div class="col-xs-2 assessment">
+    {{place.rating}}
+  </div>
+  <div class="col-xs-4 h-work">
+    Часы работы: <br><span>{{place.hours}}</span>
+  </div>
+  <div class="col-xs-6 place-adres">
+    Адрес: <br><span>{{place.adres}}</span>
+  </div>
+  <div class="col-xs-12 place-description">
+    {{place.description}}
+  </div>
+</div>
