--- a/app/components/main/place/place-place.directive.html
+++ b/app/components/main/place/place-place.directive.html
@@ -15,7 +15,7 @@
 </div>
 <div class="col-xs-8 place-desc">
   <div class="col-xs-12 place-name">
-    <a ui-sref="state1.placeOne({id:place._id})" ng-click="rel()">{{place.placeName}}</a>
+    <a ui-sref="state1.place-item({id:place._id})" ng-click="rel()">{{place.placeName}}</a>
   </div>
   <div class="col-xs-2 assessment">
     {{place.rating}}
