--- a/app/components/review/review-home.directive.html
+++ b/app/components/review/review-home.directive.html
@@ -2,7 +2,7 @@
 
 
 <div class="col-xs-12 placeId-comment-likes-items" data-ng-repeat="item in reviews | limitTo:limit">
-  <items-like-place></items-like-place>
+  <review-home-item-directive></review-home-item-directive>
 </div>
 <div class="col-xs-12 userLike-plus" data-ng-show="showLimit" data-ng-click="more()">
   <div class="col-xs-12">Еще отзывы</div>
